export const snapshot = {};

snapshot[`jsx - simple case 1`] = `
[
  [
    2,
    "div",
  ],
  [
    3,
    "div",
  ],
]
`;

snapshot[`jsx - props 1`] = `
[
  [
    2,
    "div",
  ],
  [
    9,
    "style",
  ],
  [
    8,
    {
      color: "red",
    },
  ],
  [
    9,
    "id",
  ],
  [
    10,
    "my-cool-div",
  ],
  [
    3,
    "div",
  ],
]
`;

snapshot[`jsx - children 1`] = `
[
  [
    2,
    "ul",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    2,
    "li",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    10,
    "Child #1",
  ],
  [
    3,
    "li",
  ],
  [
    2,
    "li",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    10,
    "Child #2",
  ],
  [
    3,
    "li",
  ],
  [
    2,
    "li",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    10,
    "Child #3",
  ],
  [
    3,
    "li",
  ],
  [
    3,
    "ul",
  ],
]
`;

snapshot[`jsx - mapped children 1`] = `
[
  [
    2,
    "ul",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    2,
    "li",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    10,
    "Child #1",
  ],
  [
    3,
    "li",
  ],
  [
    2,
    "li",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    10,
    "Child #2",
  ],
  [
    3,
    "li",
  ],
  [
    2,
    "li",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    10,
    "Child #3",
  ],
  [
    3,
    "li",
  ],
  [
    3,
    "ul",
  ],
]
`;

snapshot[`jsx - children + props 1`] = `
[
  [
    2,
    "ul",
  ],
  [
    9,
    "id",
  ],
  [
    10,
    "main",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    2,
    "li",
  ],
  [
    9,
    "class",
  ],
  [
    10,
    "selected",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    10,
    "Child #1",
  ],
  [
    3,
    "li",
  ],
  [
    2,
    "li",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    10,
    "Child #2",
  ],
  [
    3,
    "li",
  ],
  [
    2,
    "li",
  ],
  [
    9,
    "disabled",
  ],
  [
    1,
    true,
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    10,
    "Child #3",
  ],
  [
    3,
    "li",
  ],
  [
    3,
    "ul",
  ],
]
`;

snapshot[`jsx - nested children 1`] = `
[
  [
    2,
    "div",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    2,
    "div",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    2,
    "div",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    2,
    "div",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    2,
    "div",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    10,
    "Hello, World!",
  ],
  [
    3,
    "div",
  ],
  [
    3,
    "div",
  ],
  [
    3,
    "div",
  ],
  [
    3,
    "div",
  ],
  [
    3,
    "div",
  ],
]
`;

snapshot[`jsx - nested children + props 1`] = `
[
  [
    2,
    "div",
  ],
  [
    9,
    "id",
  ],
  [
    10,
    "1",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    2,
    "div",
  ],
  [
    9,
    "id",
  ],
  [
    10,
    "2",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    2,
    "div",
  ],
  [
    9,
    "id",
  ],
  [
    10,
    "3",
  ],
  [
    9,
    "onClick",
  ],
  [
    4,
    [Function: onClick],
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    2,
    "div",
  ],
  [
    9,
    "id",
  ],
  [
    10,
    "4",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    2,
    "div",
  ],
  [
    9,
    "id",
  ],
  [
    10,
    "5",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    10,
    "Hello, World!",
  ],
  [
    3,
    "div",
  ],
  [
    3,
    "div",
  ],
  [
    3,
    "div",
  ],
  [
    3,
    "div",
  ],
  [
    3,
    "div",
  ],
]
`;

snapshot[`jsx - fragment 1`] = `
[
  [
    2,
    "[[FRAGMENT]]",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    2,
    "span",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    10,
    "Hello #1",
  ],
  [
    3,
    "span",
  ],
  [
    2,
    "span",
  ],
  [
    9,
    "[[CHILDREN]]",
  ],
  [
    10,
    "Hello #2",
  ],
  [
    3,
    "span",
  ],
  [
    3,
    "[[FRAGMENT]]",
  ],
]
`;
